--- a/News-implied_Firm_Networks/txt_Methodology.tex
+++ b/News-implied_Firm_Networks/txt_Methodology.tex
@@ -65,8 +65,8 @@ The increasing availability of textual data from business news articles provides
 \begin{quote}
 In particular, 
 \begin{itemize}
-  \item Let $\mathcal{F}=\left\{F_1, F_2, \ldots, F_n\right\}$ represent the set of $n$ firms you are analyzing.
-  \item Let $\mathcal{A}=\left\{A_1, A_2, \ldots, A_m\right\}$ represent the set of $m$ news articles that mention these firms.
+  \item Let $\mathcal{F}=\left\{F_1, F_2, \ldots, F_n\right\}$ represent the set of $n$ firms we are analyzing.
+  \item Let $\mathcal{A}=\left\{A_1, A_2, \ldots, A_m\right\}$ represent the dataset of $m$ news articles that mention these firms.
 \end{itemize}
 We assume that the news articles can be mapped to specific dates, allowing for a time dimension if needed, i.e., $A_i(t)$, where $t$ represents the publication date of article $A_i$.
 
