--- a/News-implied_Firm_Networks/__main__.tex
+++ b/News-implied_Firm_Networks/__main__.tex
@@ -13,30 +13,31 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \title{\textsc{
-{\LARGE News-implied Firm Networks}
+{\LARGE Insert title about here}
 %\\
 %{\large News- }
 }}
 
 \author[1]{
-{ \bx \bx \bx Jesus Villota Miranda$^{\dagger}$
+{ \bx \bx \bx Insert authors about here
+%$^{\dagger}$
 %\footnote{
 %I am grateful to ...
 %I acknowledge financial support from ...
 %}
 }
 
-\bx 
-%(\textsc{cemfi})
-{\small
-$\big{<}$
-\noindent $^{\dagger}$CEMFI, Calle Casado del Alisal, 5, 28014 Madrid, Spain 
-$\big{>}$
-
-$\big{<}$
-Email: \href{jesus.villota@cemfi.edu.es}{\texttt{jesus.villota@cemfi.edu.es}}
-$\big{>}$
-}
+%\bx 
+%%(\textsc{cemfi})
+%{\small
+%$\big{<}$
+%\noindent $^{\dagger}$CEMFI, Calle Casado del Alisal, 5, 28014 Madrid, Spain 
+%$\big{>}$
+%
+%$\big{<}$
+%Email: \href{jesus.villota@cemfi.edu.es}{\texttt{jesus.villota@cemfi.edu.es}}
+%$\big{>}$
+%}
 }
 
 \date{}  % Remove date
@@ -69,7 +70,7 @@ $\big{>}$
 \newpage
 \setcounter{page}{1}
 %%%%%%%%%%%% INTRODUCTION %%%%%%%%%%%%%%%%%%
-\section{Introduction, Literature Review \& Structure}
+%\section{Introduction, Literature Review \& Structure}
 %----------------------------------------------------
 %\input{txt_introduction.tex}
 %----------------------------------------------------
@@ -81,7 +82,7 @@ $\big{>}$
 %----------------------------------------------------
 
 %%%%%%%%%%%%%%%%%%% DATA %%%%%%%%%%%%%%%%%%%%%%%%
-\section{Data}
+%\section{Data}
 %----------------------------------------------------
 %\input{txt_data.tex}
 %----------------------------------------------------
@@ -95,11 +96,13 @@ $\big{>}$
 
 
 %%%%%%%%%%%%%%%%% RESULTS %%%%%%%%%%%%%%%%%%%%%%
-\section{Results}
+%\section{Results}
 
 %%%%%%%%%%%%%%%%% CONCLUSION %%%%%%%%%%%%%%%%%%%%%%
-\section{Conclusion}
-%\input{txt__CONCLUSION.tex}
+%\section{Conclusion}
+%%\input{txt__CONCLUSION.tex}
+%This paper introduces a comprehensive and nuanced approach to constructing firm networks from business news articles by leveraging LLMs to detect and classify firm relationships. By incorporating relationship types, directionality, and reflexivity, the proposed methodology provides a rich framework for analyzing firm interactions and market dynamics. The resulting multi-layered, directed- and undirected network allows for advanced analysis of firm relationships, providing insights into how firms navigate competitive environments, form partnerships, and manage internal actions.
+
 
 
 %%%%%%%%%%%%%%%%%% BIBLIOGRAPHY %%%%%%%%%%%%%%%%%%%%%%
@@ -110,7 +113,7 @@ $\big{>}$
 %\newpage
 \appendix
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Appendix}
+%\section{Appendix}
 %\input{txt_Appendix.tex}
 
 
